deploy/kubernetes/db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: whisper
spec:
  selector:
    app: mariadb
  type: ClusterIP  
  ports:
  - protocol: TCP
    targetPort: 3306
    port: 3306
