deploy/kubernetes/dependencies.yaml
# Mariadb Server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: whisper
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.7.1-focal
---
#Maria
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: whisper
spec:
  selector:
    app: mariadb
  type: ClusterIP  
  ports:
  - protocol: TCP
    targetPort: 3306
    port: 3306
