deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisper-service
  namespace: whisper
spec:
  selector:
    app: whisper
  type: NodePort  
  ports:
  - protocol: TCP
    targetPort: 80
    port: 80
    nodePort: 30000
