deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: whisper-ingress
  namespace: whisper
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: whisper.tiannaru.xyz
      http:
        paths:
          - path: /
            backend:
              serviceName: whisper-service
              servicePort: 80
  tls:
    - hosts:
      - whisper.tiannaru.xyz
      secretName: whisper-tls
